--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -218,6 +218,7 @@ main {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+    overflow: visible;
   }
   #bg-image-div {
     height: 100%;
